; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_init.c_init_options_dev.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_init.c_init_options_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.options = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_options_dev(%struct.options* %0) #0 {
  %2 = alloca %struct.options*, align 8
  %3 = alloca i8*, align 8
  store %struct.options* %0, %struct.options** %2, align 8
  %4 = load %struct.options*, %struct.options** %2, align 8
  %5 = getelementptr inbounds %struct.options, %struct.options* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %22, label %8

8:                                                ; preds = %1
  %9 = load %struct.options*, %struct.options** %2, align 8
  %10 = getelementptr inbounds %struct.options, %struct.options* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %8
  %14 = load %struct.options*, %struct.options** %2, align 8
  %15 = getelementptr inbounds %struct.options, %struct.options* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i8* @string_alloc(i32 %16, i32* null)
  store i8* %17, i8** %3, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @basename(i8* %18)
  %20 = load %struct.options*, %struct.options** %2, align 8
  %21 = getelementptr inbounds %struct.options, %struct.options* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  br label %22

22:                                               ; preds = %13, %8, %1
  ret void
}

declare dso_local i8* @string_alloc(i32, i32*) #1

declare dso_local i32 @basename(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
